--- a/ClientApp/app/components/vehicleform/vehicle-form.component.html
+++ b/ClientApp/app/components/vehicleform/vehicle-form.component.html
@@ -11,6 +11,12 @@
   </div>
   <div class="form-group">
     <label for="model">Model</label>
+     
+
+      <select ng-options="m as models.name for m in models"
+              ng-model="item" ng-change="update()"></select>
+
+
 
     <select id="model" class="form-control">
       <option value=""></option>
