--- a/ClientApp/app/components/vehicleform/vehicle-form.component.html
+++ b/ClientApp/app/components/vehicleform/vehicle-form.component.html
@@ -1,4 +1,6 @@
 <h1>New Vehicle</h1>
+
+{{vehicle | json}}
 <form>
   <div class="form-group">
     <label for="make">Make</label>
@@ -37,6 +39,9 @@
     </label>
   </div>
   <h2>Contact</h2>
+
+
+
   <div class="form-group">
     <label for="contactName">Name</label>
     <input id="contactName" type="text" class="form-control">
