--- a/ClientApp/app/components/vehicleform/vehicle-form.component.html
+++ b/ClientApp/app/components/vehicleform/vehicle-form.component.html
@@ -6,9 +6,9 @@
     <label for="make">Make</label>
 
 
-        <select id="make" class="form-control" (change)="onMakeChange(vehicle.make)" [(ngModel)]="vehicle.make" name="make">
+        <select id="make" class="form-control" (change)="onMakeChange(vehicle.make)" [(ngModel)]="vehicle.make" name="make" required>
           <option value="">{{vehicle.make}}</option>
-      <option *ngFor="let m of makes" value="{{ m.id }}">{{ m.name }}</option>
+      <option *ngFor="let m of makes" value="{{ m.id }}">{{ m.name }} {{vehicle.make}}</option>
     </select>
   </div>
   <div class="form-group">
@@ -22,8 +22,10 @@
 
     <select id="model" class="form-control">
       <option value=""></option>
-      <option *ngFor="let m of models" value="{{ m.id }}">{{ m.name }}</option>
-    </select>
+      <!--<option *ngFor="let m of models" value="{{ m.id }}">{{ m.name }}</option>-->
+        <ng-container #vc></ng-container>
+
+</select>
   </div>
   <p>Is this vehicle registered?</p>
   <label for="registered" class="radio-inline">
