--- a/ClientApp/app/components/vehicleform/vehicle-form.component.html
+++ b/ClientApp/app/components/vehicleform/vehicle-form.component.html
@@ -1,60 +1,53 @@
 <h1>New Vehicle</h1>
 
 {{vehicle | json}}
-<form>
+<form ng-submit="submit()">
   <div class="form-group">
     <label for="make">Make</label>
 
 
-        <select id="make" class="form-control" (change)="onMakeChange(vehicle.make)" [(ngModel)]="vehicle.make" name="make" required>
-          <option value="">{{vehicle.make}}</option>
-      <option *ngFor="let m of makes" value="{{ m.id }}">{{ m.name }} {{vehicle.make}}</option>
+        <select id="make" class="form-control" (change)="onMakeChange()"[(ngModel)]="vehicle.makeId" name="makeId" required #make="ngModel">
+          <option value=""></option>
+      <option *ngFor="let m of makes" value="{{ m.id }}">{{ m.name }}</option>
     </select>
   </div>
-  <div class="form-group">
+
     <label for="model">Model</label>
-     
-
-      <select ng-options="m as models.name for m in models"
-              ng-model="item" ng-change="update()"></select>
 
 
-
-    <select id="model" class="form-control">
-      <option value=""></option>
-      <!--<option *ngFor="let m of models" value="{{ m.id }}">{{ m.name }}</option>-->
-        <ng-container #vc></ng-container>
-
-</select>
-  </div>
+    <select id="model" class="form-control" [(ngModel)]="vehicle.modelId" name="modelId" required #model="ngModel">
+        <option value=""></option>
+        <option *ngFor="let m of models" value="{{ m.id }}">{{ m.name }}</option>
+    </select>
   <p>Is this vehicle registered?</p>
   <label for="registered" class="radio-inline">
-    <input type="radio" name="isRegistered" id="registered" value="true"> Yes
+    <input type="radio" name="isRegistered" id="registered" value="true" [(ngModel)]="vehicle.isRegistered"> Yes
   </label>
   <label for="notRegistered" class="radio-inline">
-    <input type="radio" name="isRegistered" id="notRegistered" value="false"> No
+    <input type="radio" name="isRegistered" id="notRegistered" value="false"[(ngModel)]="vehicle.isRegistered"> No
   </label>
   <h2>Features</h2>
-  <div *ngFor="let f of features" class="checkbox">
-    <label for="feature{{ f.id }}">
-      <input type="checkbox" id="feature{{ f.id }}"> {{ f.name }}
-    </label>
-  </div>
+    <div *ngFor="let f of features" class="checkbox">
+        <label for="feature{{ f.id }}">
+            <input type="checkbox" id="feature{{ f.id }}" (change)="onFeatureToggle(f.id, $event)" [checked]="vehicle.features.includes(f.id)"> {{ f.name }}
+        </label>
+    </div>
+  
   <h2>Contact</h2>
 
 
 
   <div class="form-group">
     <label for="contactName">Name</label>
-    <input id="contactName" type="text" class="form-control">
+    <input id="contactName" [(ngModel)]="vehicle.contact.name"type="text" name="contactName"class="form-control">
   </div>
   <div class="form-group">
     <label for="contactPhone">Phone</label>
-    <input id="contactPhone" type="text" class="form-control">
+    <input id="contactPhone"  [(ngModel)]="vehicle.contact.phone" name="contactPhone"type="text" class="form-control">
   </div>
   <div class="form-group">
     <label for="contactEmail">Email</label>
-    <input id="contactEmail" type="text" class="form-control">
+    <input id="contactEmail" type="text"  [(ngModel)]="vehicle.contact.Email"name="contactEmai"class="form-control">
   </div>
   <button class="btn btn-primary">Save</button>
 
