--- a/ClientApp/app/components/vehicle-list/vehicle-list.component.html
+++ b/ClientApp/app/components/vehicle-list/vehicle-list.component.html
@@ -41,4 +41,4 @@
         </tr>
     </tbody>
 </table>
-<pagination [total-items]="queryResult.totalItems" [page-size]="query.pageSize" (page-changed)="onPageChange($event)"></pagination>
+<!--<pagination [total-items]="queryResult.totalItems" [page-size]="query.pageSize" (page-changed)="onPageChange($event)"></pagination>-->
