--- a/ClientApp/app/components/vehicle-list/vehicle-list.component.html
+++ b/ClientApp/app/components/vehicle-list/vehicle-list.component.html
@@ -2,6 +2,7 @@
 <p>
     <a [routerLink]="['/vehicles/new']" class="btn btn-primary">New Vehicle</a>
 </p>
+
 <div class="well">
     <div class="form-group">
         <label for="make">Make</label>
@@ -30,9 +31,9 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let v of queryResult.items">
-            <td>{{ v.id }}</td>
-            <td>{{ v.make.name }}</td>
+        <tr *ngFor="let v of vehicles">
+            <td>{{ v.model.name }}</td>
+            <td></td>
             <td>{{ v.model.name }}</td>
             <td>{{ v.contact.name }}</td>
             <td>
