--- a/ClientApp/app/components/vehicle-list/vehicle-list.component.html
+++ b/ClientApp/app/components/vehicle-list/vehicle-list.component.html
@@ -6,40 +6,44 @@
 <div class="well">
     <div class="form-group">
         <label for="make">Make</label>
-        <select id="make" class="form-control" [(ngModel)]="filter.makeId" (change)="onFilterChange()">
+        <select id="make" class="form-control" [(ngModel)]="query.makeId" (change)="onFilterChange()">
             <option value=""></option>
             <option *ngFor="let m of makes" value="{{ m.id }}">{{ m.name }}</option>
         </select>
     </div>
-    <button class="btn btn-default" (click)="resetFilter()">Reset</button>
-</div>
-<table class="table">
-    <thead>
-        <tr>
-            <th *ngFor="let c of columns">
-                <div *ngIf="c.isSortable" (click)="sortBy(c.key)">
-                    {{ c.title }}
-                    <i *ngIf="query.sortBy === c.key"
-                       class="fa"
-                       [class.fa-sort-asc]="query.isSortAscending"
-                       [class.fa-sort-desc]="!query.isSortAscending"></i>
-                </div>
-                <div *ngIf="!c.isSortable">
-                    {{ c.title }}
-                </div>
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let v of vehicles">
-            <td>{{ v.model.name }}</td>
-            <td></td>
-            <td>{{ v.model.name }}</td>
-            <td>{{ v.contact.name }}</td>
-            <td>
-                <a [routerLink]="['/vehicles/', v.id]">View</a>
-            </td>
-        </tr>
-    </tbody>
-</table>
-<!--<pagination [total-items]="queryResult.totalItems" [page-size]="query.pageSize" (page-changed)="onPageChange($event)"></pagination>-->
+
+        <table class="table">
+            <thead>
+                <tr>
+                    <th 
+                    
+                        *ngFor="let c of columns">
+                       
+                        <div *ngIf="c.isSortable" (click)="sortBy(c.key)">
+                            {{ c.title }}
+                            <i *ngIf="query.sortBy === c.key"
+                               class="fa"
+                               [class.fa-sort-asc]="query.isSortAscending"
+                               [class.fa-sort-desc]="!query.isSortAscending"></i>
+                        </div>
+                        <div *ngIf="!c.isSortable">
+                            {{ c.title }}
+                        </div>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+
+            <tbody>
+                <tr *ngFor="let v of queryResult.items">
+                    <td>{{ v.id }}</td>
+                    <td>{{ v.make.name }}</td>
+                    <td>{{ v.model.name }}</td>
+                    <td>{{ v.contact.name }}</td>
+                    <td>
+                        <a [routerLink]="['/vehicles/', v.id]">View</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <pagination [total-items]="5" [page-size]="query.pageSize" (page-changed)="onPageChange($event)"></pagination>
