--- a/ClientApp/app/components/vehicleform/vehicle-form.component.html
+++ b/ClientApp/app/components/vehicleform/vehicle-form.component.html
@@ -156,5 +156,5 @@
 </div>
 <button class="btn btn-primary">Save</button>
     
-        <button *ngIf="vehicle.id" class="btn btn-danger" type="button" (click)="delete()">Delete</button>
+        <!--<button *ngIf="vehicle.id" class="btn btn-danger" type="button" (click)="delete()">Delete</button>-->
 </form>
